--- a/_includes/head.html
+++ b/_includes/head.html
@@ -151,7 +151,7 @@
 
 
  <!-- (you can remove the below scripts but do buy me a coffee to show some support :) -->
-<!-- Maker widget  -->
+<!-- Maker widget  
   <script>
     (function(d, h, m) {
       var js,
@@ -183,7 +183,7 @@
     data-x_margin="10"
     data-y_margin="10"
   ></script>
-
+-->
   <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
   <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
   <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
