--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -21,15 +21,18 @@
 <!-- home hero section -->
 <div class="jumbotron">
   <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
-  <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
+  <p class="jumbotron-heading">{{site.author}}</p>
 
   <p class="lead" id="typewriteText"></p>
+<!--
   <span>
     {%- include github_star_button.html -%}
     {%- include github_fork_button.html -%}
   </span>
+-->
   <!-- uncomment/modify buttons as you want-->
-  <div class="jumbotron-btns">
+<!--  
+<div class="jumbotron-btns">
     <a href="{{site.url}}{{site.baseurl}}/get-started">
       <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
     </a>
@@ -37,4 +40,5 @@
       <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
      </a>
   </div>
+-->
 </div>
