--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -780,6 +780,7 @@ header {
 footer {
     width: 100%;
     height: 70px;
+    position: absolute;
     text-align: center;
     padding: 20px;
     background-color: var(--main-background-color);
