--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,3 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p> Deep learning, Vision, NLP</p>
+<p> Statistical and Computation Physics, Complex Networks</p>
+<p> Python, C++, Javascript, MatLab, Mathematica</p>
