--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -95,7 +95,6 @@ html,
 html[data-theme="dark"],
 html[data-theme="light"] {
     height: 100%;
-    min-height: 100%;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     scroll-behavior: smooth;
@@ -136,7 +135,7 @@ body {
     hanging-punctuation: first last;
     height: 100%;
     line-height: 1.35em;
-    margin: 0;
+    margin: 0 0 70px;
     text-rendering: optimizeLegibility;
     padding-top:33px;
     overflow-x:hidden;
