--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -135,7 +135,7 @@ body {
     hanging-punctuation: first last;
     height: 100%;
     line-height: 1.35em;
-    margin: 0 0 70px;
+    margin: 0;
     text-rendering: optimizeLegibility;
     padding-top:33px;
     overflow-x:hidden;
@@ -217,10 +217,12 @@ header {
 /* bootstrap override */
 .container-fluid {
     padding: 0px !important;
+    height: 100%;
     /* width: fit-content !important;*/
     margin-left: 0px !important;
     margin-right: 0px !important;
     margin-top: 10px !important;
+    margin-bottom: 70px !important;
 }
 .card {
     margin: 20px !important;
