--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -217,7 +217,7 @@ header {
 /* bootstrap override */
 .container-fluid {
     padding: 0px !important;
-    height: 100%;
+    height: 100vh;
     /* width: fit-content !important;*/
     margin-left: 0px !important;
     margin-right: 0px !important;
