--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -7,6 +7,7 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
+    min-height: 100vh;
 }
 .jumbotron-btns {
   display: block;
