--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -21,11 +21,14 @@
 
 <!-- home hero section -->
 <div class="jumbotron">
-<!--
-  <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
--->
-  <p class="jumbotron-heading">{{site.author}}</p>
+	<!--
+	  <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
+	-->
+	  <p class="jumbotron-heading">{{site.author}}</p>
 
-  <p class="lead" id="typewriteText"></p>
-  <!-- uncomment/modify buttons as you want-->
+	  <p class="lead" id="typewriteText" style='font-size:'></p>
+	  <!-- uncomment/modify buttons as you want-->
+	<div class="jumbotron-btns"> 
+		<a href="/resume"> <button class="btn btn-md btn-warning"> <strong>About Me</strong> </button> </a> 
+	</div>
 </div>
